replaced DatabaseController because of its redundancy also changed all method names to PEP8 standard

--- a/src/GUI/addContactPopup.kv
+++ b/src/GUI/addContactPopup.kv
@@ -27,7 +27,7 @@
             Button:
                 size_hint: [None, None]
                 background_normal: "GUI/Icons/iConfirm.png"
-                on_release: root.addContact()
+                on_release: root.add_contact()
         AnchorLayout:
             anchor_x: "center"
             Button:
