--- a/src/GUI/addressLayout.kv
+++ b/src/GUI/addressLayout.kv
@@ -35,15 +35,15 @@
             Button:
                 size_hint: [None, None]
                 background_normal: "GUI/Icons/iPrevious.png"
-                on_release: root.previousPage()
+                on_release: root.previous_page()
             Button:
                 size_hint: [None, None]
                 background_normal: "GUI/Icons/iAdd.png"
-                on_release: root.addNewContact()
+                on_release: root.add_new_contact()
             Button:
                 size_hint: [None, None]
                 background_normal: "GUI/Icons/iNext.png"
-                on_release: root.nextPage()
+                on_release: root.next_page()
             Label:
                 bold: True
                 font_size: 24
