--- a/src/GUI/deletePopup.kv
+++ b/src/GUI/deletePopup.kv
@@ -24,5 +24,5 @@
             Button:
                 size_hint: [None, None]
                 background_normal: "GUI/Icons/iConfirm.png"
-                on_release: root.deleteMail()
+                on_release: root.delete_mail()
                 on_release: root.dismiss()
