--- a/src/GUI/firstStart.kv
+++ b/src/GUI/firstStart.kv
@@ -11,13 +11,13 @@
             cols: 2
             # Button:
             #     text: "GMX"
-            #     on_press: root.parent.selectedProvider(0)
+            #     on_press: root.parent.selected_provider(0)
             Button:
                 text: "WEB.de"
-                on_release: root.parent.selectedProvider(1)
+                on_release: root.parent.selected_provider(1)
             Button:
                 text: "GMAIL"
-                on_press: root.parent.selectedProvider(2)
+                on_press: root.parent.selected_provider(2)
 
         AnchorLayout:
             anchor_x: "center"
