--- a/src/GUI/inboxLayout.kv
+++ b/src/GUI/inboxLayout.kv
@@ -21,10 +21,10 @@
             orientation: "horizontal"
             Button:
                 text: "Not read e-mails"
-                on_release: root.toggleSelection()
+                on_release: root.toggle_selection()
             Button:
                 text: "All e-mails"
-                on_release: root.toggleSelection()
+                on_release: root.toggle_selection()
         GridLayout:
             id: grid
             cols: 1
@@ -42,11 +42,11 @@
             Button:
                 size_hint: [None, None]
                 background_normal: "GUI/Icons/iRefresh.png"
-                on_release: root.scheduledMailCheck("lol")
+                on_release: root.scheduled_mail_check("lol")
             Button:
                 size_hint: [None, None]
                 background_normal: "GUI/Icons/iNext.png"
-                on_release: root.nextPage()
+                on_release: root.next_page()
             Label:
                 bold: True
                 font_size: 24
