--- a/src/GUI/outboxLayout.kv
+++ b/src/GUI/outboxLayout.kv
@@ -32,11 +32,11 @@
             Button:
                 size_hint: [None, None]
                 background_normal: "GUI/Icons/iRefresh.png"
-                on_release: root.scheduledMailCheck("lol")
+                on_release: root.scheduled_mail_check("lol")
             Button:
                 size_hint: [None, None]
                 background_normal: "GUI/Icons/iNext.png"
-                on_release: root.nextPage()
+                on_release: root.next_page()
             Label:
                 bold: True
                 font_size: 24
