--- a/src/GUI/readlayout.kv
+++ b/src/GUI/readlayout.kv
@@ -49,7 +49,7 @@
                     Button:
                         size_hint: [None, None]
                         background_normal: "GUI/Icons/iPrevious.png"
-                        on_release: root.previousEmail()
+                        on_release: root.previous_email()
                 AnchorLayout:
                     align_h: "center"
                     Button:
@@ -61,4 +61,4 @@
                     Button:
                         size_hint: [None, None]
                         background_normal: "GUI/Icons/iNext.png"
-                        on_release: root.nextEmail()
+                        on_release: root.next_email()
