--- a/src/GUI/deletePopupContact.kv
+++ b/src/GUI/deletePopupContact.kv
@@ -24,5 +24,5 @@
             Button:
                 size_hint: [None, None]
                 background_normal: "GUI/Icons/iConfirm.png"
-                on_release: root.deleteContact()
+                on_release: root.delete_contact()
                 on_release: root.dismiss()
