replying to messages works again,  also empty Write Layouts are possible now

--- a/src/GUI/readlayout.kv
+++ b/src/GUI/readlayout.kv
@@ -40,7 +40,7 @@
                 scroll_type: ['bars']
                 TextInput:
                     id: textOutput
-                    text: "text"
+                    text: ""
                     readonly: True
                     # use_bubble: True
                     size_hint: 1, None
