updated keyboard accessibility (not fully working yet though) added SettingsLayout which will be filled with option to change the settings lateron

--- a/src/GUI/main.kv
+++ b/src/GUI/main.kv
@@ -2,7 +2,7 @@
 
 <Catalog@BoxLayout>:
     screen_manager: screen_manager
-    buttons: menu.buttons
+    menu: menu
 
     MenuLayout:
         id: menu
@@ -22,3 +22,5 @@
                 name: "Write"
             AddressLayout:
                 name: "Address"
+            SettingsLayout:
+                name: "Settings"
