Keyboard accessibility does not work for popups (the singleton gets newly created somehow) Everything else is nicely reachable (even though the order should be adjusted maybe.. and the initial focus)

--- a/src/GUI/deletePopupContact.kv
+++ b/src/GUI/deletePopupContact.kv
@@ -18,11 +18,11 @@
             Button:
                 size_hint: [None, None]
                 background_normal: "GUI/Icons/iCancel.png"
-                on_release: root.dismiss()
+                on_release: root.call_dismiss()
         AnchorLayout:
             anchor_x: "center"
             Button:
                 size_hint: [None, None]
                 background_normal: "GUI/Icons/iConfirm.png"
                 on_release: root.delete_contact()
-                on_release: root.dismiss()
+                on_release: root.call_dismiss()
