--- a/src/GUI/addContactPopup.kv
+++ b/src/GUI/addContactPopup.kv
@@ -9,7 +9,7 @@
 
 <AddContactPopup>:
     size_hint: [None, None]
-    size: [450, 600]
+    size: [600, 800]
     auto_dismiss: False
     title: 'Add Contact'
     title_color: (0,0,0,1)
@@ -31,10 +31,9 @@
             id: taddress
             text: "E-Mail"
         BoxLayout:
-            # background: "GUI/Icons/white_bg_400x400.png"
             FileChooserIconView:
                 id: file_chooser
-                filters: ['*.png', '*.jpg', '*.jpeg']
+                filters: ['*.png', '*.jpg', '*.jpeg', '*.JPG', '*.JPEG']
                 rootpath: "../CustomPictures/"
         AnchorLayout:
             anchor_x: "center"
