--- a/src/GUI/writelayout.kv
+++ b/src/GUI/writelayout.kv
@@ -52,9 +52,11 @@
                     anchor_x: "center"
                     Button:
                         size_hint: [None, None]
+                        tooltip: "Send this e-mail"
                         background_normal: "GUI/Icons/iConfirm.png"
                         on_release: root.send_mail()
             #Label:
             #    size_hint: [0.2, 0.1]
             #    text: "Anhänge:"
+            # simply use a popup with a filechooser
 
