--- a/src/GUI/outboxLayout.kv
+++ b/src/GUI/outboxLayout.kv
@@ -27,14 +27,17 @@
             padding: [root.width / 6, 0]
             Button:
                 size_hint: [None, None]
+                tooltip: "Switch to previous page"
                 background_normal: "GUI/Icons/iPrevious.png"
                 on_release: root.previous_page()
             Button:
                 size_hint: [None, None]
+                tooltip: "Check for new e-mails"
                 background_normal: "GUI/Icons/iRefresh.png"
                 on_release: root.scheduled_mail_check("lol")
             Button:
                 size_hint: [None, None]
+                tooltip: "Switch to next page"
                 background_normal: "GUI/Icons/iNext.png"
                 on_release: root.next_page()
             Label:
