fixed a few bugs added focus icons

--- a/src/GUI/inboxLayout.kv
+++ b/src/GUI/inboxLayout.kv
@@ -21,7 +21,7 @@
             orientation: "horizontal"
             Button:
                 text: root.all_emails
-                tooltip: "Show only not read e-mails"
+                tooltip: root.all_emails
                 on_release: root.toggle_selection()
         GridLayout:
             id: grid
