--- a/src/GUI/readlayout.kv
+++ b/src/GUI/readlayout.kv
@@ -25,6 +25,7 @@
                     text: "Sender:"
                 TextInput:
                     id: sender
+                    tooltip: "The sender"
                     readonly: True
                     text: ""
                 Label:
@@ -33,6 +34,7 @@
                     text: "Topic:"
                 TextInput:
                     id: subject
+                    tooltip: "The subject"
                     readonly: True
                     text: ""
             ScrollView:
@@ -40,6 +42,7 @@
                 scroll_type: ['bars']
                 TextInput:
                     id: textOutput
+                    tooltip: "The message"
                     text: ""
                     readonly: True
                     # use_bubble: True
