--- a/src/GUI/writelayout.kv
+++ b/src/GUI/writelayout.kv
@@ -25,6 +25,7 @@
                     bold: True
                 TextInput:
                     id: sendTo
+                    tooltip: "Enter the e-mail address here"
                     text: ""
                     multiline: False
                 Label:
@@ -33,6 +34,7 @@
                     bold: True
                 TextInput:
                     id: subject
+                    tooltip: "Enter the subject here"
                     text: ""
                     multiline: False
             Label:
@@ -42,6 +44,7 @@
                 text: "Your message:"
             TextInput:
                 id: mailText
+                tooltip: "Enter the message here"
                 text: ""
             GridLayout:
                 size_hint: [1, 0.2]
