--- a/src/GUI/writelayout.kv
+++ b/src/GUI/writelayout.kv
@@ -27,6 +27,8 @@
                     id: sendTo
                     tooltip: "Enter the e-mail address here"
                     text: ""
+                    # write_tab added in 1.9.0
+                    # write_tab: False
                     multiline: False
                 Label:
                     size_hint: [0.2, 1]
@@ -36,6 +38,7 @@
                     id: subject
                     tooltip: "Enter the subject here"
                     text: ""
+                    # write_tab: False
                     multiline: False
             Label:
                 size_hint: [1, 0.1]
