--- a/src/GUI/writelayout.kv
+++ b/src/GUI/writelayout.kv
@@ -27,6 +27,7 @@
                     id: sendTo
                     tooltip: "Enter the e-mail address here"
                     text: ""
+                    font_size: root.text_size
                     # write_tab added in 1.9.0
                     # write_tab: False
                     multiline: False
@@ -38,6 +39,7 @@
                     id: subject
                     tooltip: "Enter the subject here"
                     text: ""
+                    font_size: root.text_size
                     # write_tab: False
                     multiline: False
             Label:
@@ -49,6 +51,7 @@
                 id: mailText
                 tooltip: "Enter the message here"
                 text: ""
+                font_size: root.text_size
             GridLayout:
                 size_hint: [1, 0.2]
                 rows: 1
