--- a/src/GUI/menuLayout.kv
+++ b/src/GUI/menuLayout.kv
@@ -58,8 +58,8 @@
                     id: settingsBtn
                     tooltip: "Change settings"
                     size_hint: [None, None]
-                    text: "Settings"
-                    # background_normal: "GUI/Icons/iContacts.png"
+                    text: ""
+                    background_normal: "GUI/Icons/iSettings.png"
                     on_release: root.parent.show_layout("Settings")
             BoxLayout:
                 padding: 25
