updated database to use the session more efficiently

--- a/src/GUI/EmailItem.kv
+++ b/src/GUI/EmailItem.kv
@@ -17,11 +17,7 @@
     Label:
         bold: not root.read
         font_size: 16
-        text: root.name
-    Label:
-        bold: not root.read
-        font_size: 16
-        text: root.email
+        text: root.display_name
     Label:
         bold: not root.read
         font_size: 16
