--- a/src/GUI/inboxLayout.kv
+++ b/src/GUI/inboxLayout.kv
@@ -20,8 +20,8 @@
             size_hint: [1, 0.1]
             orientation: "horizontal"
             Button:
-                text: root.all_emails
-                tooltip: root.all_emails
+                text: root.all_emails_text
+                tooltip: root.all_emails_text
                 on_release: root.toggle_selection()
         GridLayout:
             id: grid
